# Simulation_representation

./: README.md  preliminary_results.ipynb  simulation.py
download/: .Rprofile  .flake8  .gitignore  Makefile  README.md  config.yml  pyproject.toml
download/analysis/: README.md
download/analysis/R/: figure_phase_reason.R  figures.R  report.rmd
download/analysis/R/sections/: efficacy.rmd  predictions.rmd  safety.rmd  sentenceSimilarities.rmd
download/analysis/python/: enrichments.py  enrichments_permuted.py  enrichments_stop_phase.py  multiple_testing_correction.py
download/classifier/: README.md
download/classifier/stop_reasons/: pt_trainer.py  utils.py
download/data/: reason_vs_phase_predictions.csv
download/utils/: install_dependencies.sh
